--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
                       <a class="nav-link" href="#">Početna <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#">Proizvod 1</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
+                      <a class="nav-link" href="#">Proizvod 2</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Proizvod 3</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Jezik
+                            <img src="assets/rs.svg" alt="srpski jezik">
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item active" href="index.html"><img src="assets/rs.svg" alt="srpski jezik"></a>
