--- a/indexEn.html
+++ b/indexEn.html
@@ -20,14 +20,17 @@
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#">Product 1</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
+                      <a class="nav-link" href="#">Product 2</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Product 3</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Langue
+                            <img src="assets/gb.svg" alt="english lague">
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="index.html"><img src="assets/rs.svg" alt="srpski jezik"></a>
